<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".presentation.generalscreen.GeneralFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvInputValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_value"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSpinnerFirstPair"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSpinnerFirstPair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_currency"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInputValueText"
        app:layout_constraintTop_toTopOf="@+id/tvInputValueText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerFirstPair"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputValueText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black"
            android:hint="@string/currency_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerFirstPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/custom_spinner"
        android:popupBackground="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConvertTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/convert_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerSecondPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_spinner"
        android:popupBackground="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tvConvertTo"
        app:layout_constraintStart_toStartOf="@+id/tvConvertTo"
        app:layout_constraintTop_toBottomOf="@+id/tvConvertTo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#EFECEC"
        android:layout_marginTop="24dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSecondPair" />

    <Button
        android:id="@+id/btnСalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>